# jatszoter

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  setup.cfg  setup.py
dev/: Makefile  README.md  motd  requirements.txt
packer/: pack.py
src/agent/: __main__.py
src/agent/routes/: create.py
src/jatszoter/agent/: __init__.py  __main__.py
src/jatszoter/server/api/: __main__.py
src/jatszoter/server/web/: __main__.py
tools/: Makefile  README.md  motd  requirements.txt
