[metadata]
version = 0.0.1
license = MIT
url = https://github.com/zombig/jatszoter
author = Artem Kovalev
author_email = me@zombig.name
description = Matching CCU Collector
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python
  License :: OSI Approved :: Private/Proprietary
  Operating System :: POSIX :: Linux
[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.10
[options.packages.find]
where = src
